# robot-framework-listener

./: EmailSenderListener.py  QuickStart.rst  README.md  mail_config.ini  pyproject.toml
lib/: LoginLibrary.py
sut/: login.py
